Aula do dia 07/08/2025

--- a/templates/crud_base/usuario_lead.html
+++ b/templates/crud_base/usuario_lead.html
@@ -16,8 +16,8 @@
     <p> Com mais um click, você entrará em nosso ambiente gratuíto de jogos e criação de jogos</p>
 
     <form>
-        <imput type="text" required nome="nome" placeholder="Qual o seu nome?">
-        <imput type="text" nome="apelido" placeholder="Qual o seu nickname?">
+        <input type="text" required nome="nome" placeholder="Qual o seu nome?">
+        <input type="text" nome="apelido" placeholder="Qual o seu nickname?">
         <select>
             <option selected>Qual o seu gênero preferido</option>
             <option>Visual Novel</option>
